# TournamentTracker360

./: CMakeLists.txt  Images.qrc  LICENSE  README.md  Tournament_de_DE.ts  backendToCreateMatch.cpp  backendToCreateMatch.h  icon.rc  installer.iss  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pointstable.cpp  pointstable.h  pointstable.ui  schedule.cpp  schedule.h  schedule.ui
src/backend/: CMakeLists.txt
src/backend/excelManager/: CMakeLists.txt
src/backend/matchCreator/: MatchCreator.cpp
src/backend/matchCreator/include/: MatchCreator.h
src/backend/matchCreatorLib/: CMakeLists.txt  MatchCreator.cpp
src/backend/matchCreatorLib/include/: MatchCreator.h
